#10 Deploy variaveis de ambiente v1.1

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,3 @@
-REACT_APP_HOST=http://pitu.tk
+REACT_APP_HOST=http://pitu.tk/
 
-REACT_APP_API=http://api.pitu.tk/3001/
+REACT_APP_API=http://api.pitu.tk:3001/
