--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,5 @@
-REACT_APP_HOST=http://pitu.tk/
+REACT_APP_HOST=http://www.pituandretomaz.tk/
 
-REACT_APP_API=http://api.pitu.tk:3001/
+REACT_APP_API=http://api.pituandretomaz.tk:3001/
+
+REACT_APP_PROJECT_NAME=Pitu
